add a new class(start)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+     <link rel="stylesheet" href="Nanum+Gothic&display=swap">
     <style>
         .top {
             overflow: hidden;
@@ -16,7 +17,7 @@
         .top a {
             float: left;
             display: block;
-            color:burlywood;
+            color:White;
             text-align:center;
             padding:14px 16px;
             text-decoration:none;
@@ -36,6 +37,10 @@
             background-size: cover;
             background-position: center;
         }
+          .start{
+            font-size: x-large;
+            font-family:'Nanum Gothic', sans-serif ;
+        }
         *{
             margin: 0;
             padding: 0;
@@ -54,9 +59,10 @@
 
        <div class="main">
         <h1> Hi there!</h1>
+        
         <br>
-        <br>
-        <pre>                                                                                                              We are devloper....</pre>
+        
+        <pre class="start">                                                                                                             We are Frontend Developers</pre>
         <br>
         <br>
         <br>
